// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bpkHeaderRenderer does not render sort icons if sorting disabled 1`] = `
<DocumentFragment>
  <div>
    <span
      class="bpk-data-table-column__header"
      title="Label"
    >
      Label
    </span>
  </div>
</DocumentFragment>
`;

exports[`bpkHeaderRenderer renders sort icon with down icon selected 1`] = `
<DocumentFragment>
  <div>
    <span
      class="bpk-data-table-column__header"
      title="Label"
    >
      Label
    </span>
    <div
      class="bpk-data-table-column__sort-icons"
    >
      <svg
        class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
        />
      </svg>
      <svg
        class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`bpkHeaderRenderer renders sort icon with up icon selected 1`] = `
<DocumentFragment>
  <div>
    <span
      class="bpk-data-table-column__header"
      title="Label"
    >
      Label
    </span>
    <div
      class="bpk-data-table-column__sort-icons"
    >
      <svg
        class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
        />
      </svg>
      <svg
        class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`bpkHeaderRenderer renders sort icons 1`] = `
<DocumentFragment>
  <div>
    <span
      class="bpk-data-table-column__header"
      title="Label"
    >
      Label
    </span>
    <div
      class="bpk-data-table-column__sort-icons"
    >
      <svg
        class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.463 15.75h9.074a1.358 1.358 0 0 0 1.11-2.251l-4.354-4.77a1.53 1.53 0 0 0-2.184-.04l-4.718 4.77a1.357 1.357 0 0 0 1.072 2.291z"
        />
      </svg>
      <svg
        class="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.537 8.25H7.463a1.358 1.358 0 0 0-1.11 2.251l4.354 4.77a1.53 1.53 0 0 0 2.184.04l4.718-4.77a1.357 1.357 0 0 0-1.072-2.291z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
